--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Spot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="estilos.css">
-    <!--<script src="https://kit.fontawesome.com/6d11003e79.js" crossorigin="anonymous"></script>-->
 </head>
 <body>
     <header>
        <nav>
-         <ul>
+         <ul class="menu">
            <li>Inicio</li>
-           <li>
-             <span>Explorar</span>
+           <li class="submenu">
+             <span>Explorar ▾</span>
              <ul>
                <li>Videojuegos</li>
                <li>Peliculas</li>
                <li>Series</li>
-              <ul>
+             </ul>
            </li>
            <li>Contacto</li>
            <li>Sobre Nosotros</li>
@@ -34,17 +31,19 @@
     <main>
        <section>
          <h1>Videojuegos</h1>
-         <div class="tarjeta">
-           <h2>Hello Kitty Island Adventure</h2>
-           <img src="">
-         </div>
-         <div class="tarjeta">
-           <h2>Mario Kart World</h2>
-           <img src="">
-         </div>
-         <div class="tarjeta">
-           <h2>Mario Party Jamboree</h2>
-           <img src="">
+         <div class="contenedor-tarjetas">
+            <div class="tarjeta">
+              <h2>Hello Kitty Island Adventure</h2>
+              <img src="hellokitty.avif" alt="Hello Kitty Island Adventure">
+            </div>
+            <div class="tarjeta">
+              <h2>Mario Kart World</h2>
+              <img src="marioparty.avif" alt="Mario Kart World">
+            </div>
+            <div class="tarjeta">
+              <h2>Mario Party Jamboree</h2>
+              <img src="jamboree.avif" alt="Mario Party Jamboree">
+            </div>
          </div>
        </section>
     </main>
